--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-  <head>
+<head>
     <title>北京大学附属中学</title>
     <link rel="stylesheet" href="fashion.css">
-  </head>
-  <body>
-      <ul>
+</head>
+<body>
+    <ul>
         <li><a href="#" id="now">主页</a></li>
         <li><a href="introduce.html">介绍</a></li>
         <li>
-          <a href="#">更多</a>
-          <ul class="dropdown">
-            <li><a href="#">制作小组</a></li>
-            <li><a href="#">班级介绍</a></li>
-            <li><a href="surprise.html">点我有惊喜</a></li>
+            <a href="#">更多</a>
+            <ul class="dropdown">
+                <li><a href="#">制作小组</a></li>
+                <li><a href="#">班级介绍</a></li>
+                <li><a href="surprise.html">点我有惊喜</a></li>
+            </ul>
         </li>
-      </ul>
-    
-  </body>
+    </ul>
+    <div>new</div>
+    <!-- 以下是添加的文字内容 -->
+    <span>欢迎来到北京大学附属中学官网，探索更多精彩内容！</span>
+</body>
 </html>
