Add website color

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
             </ul>
         </li>
     </ul>
-    <div>new</div>
-    <!-- 以下是添加的文字内容 -->
-    <span>欢迎来到北京大学附属中学官网，探索更多精彩内容！</span>
+    <img src="791571123765_.pic_hd.png" width="1420px" height="auto">
+    <div>
+        <!-- 以下是添加的文字内容 -->
+        <span>欢迎来到北京大学附属中学官网!</span>
+    </div>
+    
 </body>
 </html>
