Create new folor

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </ul>
         </li>
     </ul>
-    <img src="791571123765_.pic_hd.png" width="1420px" height="auto">
+    <img src="../image/791571123765_.pic_hd.png" width="1420px" height="auto">
     <div>
         <!-- 以下是添加的文字内容 -->
         <span>欢迎来到北京大学附属中学官网!</span>
