--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
         <li>
             <a href="#">更多</a>
             <ul class="dropdown">
-                <li><a href="#">制作小组</a></li>
                 <li><a href="#">班级介绍</a></li>
                 <li><a href="surprise.html">点我有惊喜</a></li>
             </ul>
         </li>
     </ul>
-    <img src="../image/791571123765_.pic_hd.png" width="1420px" height="auto">
+    <!-- <img src="../image/791571123765_.pic_hd.png" width="1430px" height="auto"> -->
     <div>
         <!-- 以下是添加的文字内容 -->
-        <span>欢迎来到北京大学附属中学官网!</span>
+        <p>欢迎来到北京大学附属中学官网!</p>
     </div>
     
 </body>
