--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>北京大学附属中学</title>
     <link rel="stylesheet" href="fashion.css">
+    <link rel="icon" href="image/shime1f.ico" type="image/x-icon">
 </head>
 <body>
     <ul>
@@ -15,7 +16,7 @@
             </ul>
         </li>
     </ul>
-    <!-- <img src="../image/791571123765_.pic_hd.png" width="1430px" height="auto"> -->
+    <!-- <img src="../image/791571123765_.pic_hd.png" > -->
     <div>
         <!-- 以下是添加的文字内容 -->
         <p>欢迎来到北京大学附属中学官网!</p>
