--- a/introduce.html
+++ b/introduce.html
@@ -97,6 +97,24 @@
         font-family: 'MyCustomFont';
         src: url(font/汉仪文黑-85W.ttf) format('truetype'),
         }
+        img {
+            position: absolute;
+            left: 370px;
+            top: 100px;
+        }
+        #menting{
+            position: relative;
+            left: 200px;
+            top:650px;
+        }
+        span{
+            position: relative;
+            left: 0px;
+            top: 700px;
+            text-align: center;
+            font-size:40px;
+            color: black;
+        }
     </style>
     <link rel="icon" href="image/shime1f.ico" type="image/x-icon">
 </head>
@@ -122,8 +140,8 @@
         </nav>
     </ul>
     <div>
-        <img src="image/mentingyejing.jpg" width="1000" height="600">
-        <img src="image/xuexiaocaochang_resize1.jpg" width="1000" height="600">
+        <img src="image/mentingyejing.jpg" width="1500" height="650" id="menting">
+        <img src="image/xuexiaocaochang_resize1.jpg" width="1500" height="650">
     </div>
     <div id="star112">
         <span>
