--- a/surprise.html
+++ b/surprise.html
@@ -10,6 +10,7 @@
         color: red;
       }
     </style>
+    <link rel="icon" href="image/shime1f.ico" type="image/x-icon">
   </head>
   <body>
     <img src="image/GIF 2024-12-22 16-20-01.gif" alt="nailong" />
